--- a/www_root/style.css
+++ b/www_root/style.css
@@ -1,30 +1,133 @@
-body{
-background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0)));
-background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-background: -o-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-background: -ms-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 );
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-
-padding: 20px 200px;
-font-family: monospace;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
+
+/* Pedro style */
+body{
+	background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0)));
+	background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+	background: -o-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+	background: -ms-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+	background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 );
+
+
+	margin: 0px auto;
+	max-width: 1000px;
+	font-family: monospace;
+}
+
+header{
+	margin-top: 50px;
+}
 header h1{
-	ssbackground-color: white;
-	ssborder-radius: 10px;
-	border-bottom: 1px solid #cccccc;
-	border-top: 1px solid #cccccc;
+	border-bottom: 1px solid #dddddd;
+	border-top: 1px solid #dddddd;
 	padding: 5px 10px;
 	color: #333333;
-	width: 70%;
-	font-size: 14pt;
+	margin-right: 200px;
+	font-size: 18pt;
+	margin-bottom: 50px;
 }
-
 header img{
 	float: right;
 	margin-top: 5px;
 	margin-right: 20px;
+}
+
+
+
+table{
+	clear: both;
+	box-shadow: 5px 5px 5px #999999;
+	width: 100%;
+	font-family: sans-serif;
+	margin-bottom: 50px;
+}
+table caption{
+	text-align: left;
+	font-size: 26pt;
+	font-family: monospace;
+	color: #999999;
+	padding-left: 0px;
+	padding-bottom: 20px;
+	
+}
+
+table tr:hover{
+	background-color: #eeeeee;
+}
+table th{
+	text-align: left;
+	background-color: white;
+	color: black;
+	padding: 5px 10px;
+	font-size: 10pt;
+	border-bottom: 1px solid #888888;
+}
+table td{
+	ssborder-right: 1px solid #dddddd;
+	border-bottom: 1px solid #dddddd;
+	font-size: 10pt;
+	padding: 5px 10px;
+}
+table td a{
+	font-weight: bold;
+	sspadding: 5px 10px;
+	font-size: 12pt;
+}
+
+p.top {
+ margin: 10px 300px 20px 50px;
+ font-size: 10pt;
+ line-height: 140%;
+ color: #999999;
+ font-family: monospace:
 }
