--- a/www_root/style.css
+++ b/www_root/style.css
@@ -50,38 +50,57 @@ table {
 
 /* Pedro style */
 body{
-	background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0)));
-	background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-	background: -o-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-	background: -ms-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-	background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 );
-
-
+	background-color: #dddddd;
 	margin: 0px auto;
-	max-width: 1000px;
 	font-family: monospace;
 }
 
+b{
+	font-weight: bold;
+}
+
 header{
-	margin-top: 50px;
+	margin: 0;
+	padding: 0;
+	
 }
 header h1{
 	border-bottom: 1px solid #dddddd;
-	border-top: 1px solid #dddddd;
-	padding: 5px 10px;
-	color: #427EBF;
-	margin-right: 200px;
-	font-size: 18pt;
-	margin-bottom: 50px;
-}
-header img{
-	float: right;
-	margin-top: 5px;
-	margin-right: 20px;
+	padding: 8px 10px;
+	margin: 0;
+	color: #666666;
+	font-size: 16pt;
+	background-image: url("http://wiki.flightgear.org/images/thumb/6/62/FlightGear_logo.png/23px-FlightGear_logo.png");
+	background-repeat: no-repeat;
+	background-position: 5px 5px;
+	text-align: left;
+	padding-left: 50px;
 }
 
+#doc_iframe{
+	width: 100%;
+	height: 80%;
+}
+
+.content{
+	margin: 0px auto;
+	max-width: 1000px;
+	background-color: white;
+	border-radius: 20px;
+	padding: 20px;
+}
+   
+
+
+h1{
+	text-align: left;
+	font-size: 26pt;
+	font-family: monospace;
+	color: #999999;
+	
+	margin-top: 50px;
+	margin-bottom: 30px;
+}
 
 
 table{
@@ -91,16 +110,6 @@ table{
 	font-family: sans-serif;
 	margin-bottom: 50px;
 }
-table caption{
-	text-align: left;
-	font-size: 26pt;
-	font-family: monospace;
-	color: #999999;
-	padding-left: 0px;
-	padding-bottom: 20px;
-	
-}
-
 table tr:hover{
 	background-color: #eeeeee;
 }
@@ -119,18 +128,16 @@ table td{
 	padding: 5px 10px;
 }
 table td a{
+	font-weight: normal;
+	
+}
+table td a.lnk{
+	display: block;
 	font-weight: bold;
-	sspadding: 5px 10px;
 	font-size: 12pt;
+	padding-left: 10px;
 }
 
-p.top {
- margin: 10px 300px 20px 50px;
- font-size: 10pt;
- line-height: 140%;
- color: #999999;
- font-family: monospace:
-}
 
 h2{
 	font-size: 26pt;
@@ -150,7 +157,7 @@ p{
 .info{
 	background-color: #dddddd;
 	border-radius: 10px;
-	margin: 30px 400px 20px 100px;
+	margin: 30px 200px 20px 20px;
 	padding: 20px;
 }
 
@@ -162,3 +169,221 @@ li{
 	padding: 5px;
 	line-height: 140%;
 }
+
+
+
+
+
+
+
+
+
+
+
+/****************************************************************************/
+/* Top Menu */
+/****************************************************************************/
+/* http://www.red-team-design.com/wp-content/uploads/2011/03/css3-dropdown-menu-demo.html */
+
+#menu
+{
+    width: 100%;
+    margin: 0;
+    padding: 10px 0 0 0;
+    list-style: none;  
+    background: #111;
+    background: -moz-linear-gradient(#444, #111); 
+    background: -webkit-gradient(linear,left bottom,left top,color-stop(0, #111),color-stop(1, #444));  
+    background: -webkit-linear-gradient(#444, #111);    
+    background: -o-linear-gradient(#444, #111);
+    background: -ms-linear-gradient(#444, #111);
+    background: linear-gradient(#444, #111);
+    DD-moz-border-radius: 50px;
+    DDborder-radius: 50px;
+    -moz-box-shadow: 0 2px 1px #9c9c9c;
+    -webkit-box-shadow: 0 2px 1px #9c9c9c;
+    box-shadow: 0 2px 1px #9c9c9c;
+}
+
+#menu li
+{
+    float: left;
+    padding: 0 0 10px 0;
+    position: relative;
+    line-height: 0;
+}
+
+#menu a 
+{
+    float: left;
+    height: 25px;
+    padding: 0 25px;
+    color: #999;
+    text-transform: uppercase;
+    font: bold 12px/25px Arial, Helvetica;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #000;
+}
+
+#menu li:hover > a
+{
+    color: #fafafa;
+}
+
+*html #menu li a:hover /* IE6 */
+{
+    color: #fafafa;
+}
+
+#menu li:hover > ul
+{
+    display: block;
+}
+
+/* Sub-menu */
+
+#menu ul
+{
+    list-style: none;
+    margin: 0;
+    padding: 0;    
+    display: none;
+    position: absolute;
+    top: 35px;
+    left: 0;
+    z-index: 99999;    
+    background: #444;
+    background: -moz-linear-gradient(#444, #111);
+    background: -webkit-gradient(linear,left bottom,left top,color-stop(0, #111),color-stop(1, #444));
+    background: -webkit-linear-gradient(#444, #111);    
+    background: -o-linear-gradient(#444, #111); 
+    background: -ms-linear-gradient(#444, #111);    
+    background: linear-gradient(#444, #111);
+    -moz-box-shadow: 0 0 2px rgba(255,255,255,.5);
+    -webkit-box-shadow: 0 0 2px rgba(255,255,255,.5);
+    box-shadow: 0 0 2px rgba(255,255,255,.5);   
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+#menu ul ul
+{
+  top: 0;
+  left: 130px;
+  margin: 0;
+}
+
+#menu ul li
+{
+    float: none;
+    margin: 0;
+    padding: 0;
+    display: block;  
+    -moz-box-shadow: 0 1px 0 #111111, 0 2px 0 #777777;
+    -webkit-box-shadow: 0 1px 0 #111111, 0 2px 0 #777777;
+    box-shadow: 0 1px 0 #111111, 0 2px 0 #777777;
+}
+
+#menu ul li:last-child
+{   
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;    
+}
+
+#menu ul a
+{    
+    padding: 10px;
+    height: 10px;
+    width: 130px;
+    height: auto;
+    line-height: 1;
+    display: block;
+    white-space: nowrap;
+    float: none;
+    text-transform: none;
+}
+
+*html #menu ul a /* IE6 */
+{    
+    height: 10px;
+}
+
+*:first-child+html #menu ul a /* IE7 */
+{    
+    height: 10px;
+}
+
+#menu ul a:hover
+{
+    background: #0186ba;
+    background: -moz-linear-gradient(#04acec,  #0186ba);    
+    background: -webkit-gradient(linear, left top, left bottom, from(#04acec), to(#0186ba));
+    background: -webkit-linear-gradient(#04acec,  #0186ba);
+    background: -o-linear-gradient(#04acec,  #0186ba);
+    background: -ms-linear-gradient(#04acec,  #0186ba);
+    background: linear-gradient(#04acec,  #0186ba);
+}
+
+#menu ul li:first-child > a
+{
+    -moz-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
+}
+
+#menu ul li:first-child > a:after
+{
+    content: '';
+    position: absolute;
+    left: 30px;
+    top: -8px;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 8px solid #444;
+}
+
+#menu ul ul li:first-child a:after
+{
+    left: -8px;
+    top: 12px;
+    width: 0;
+    height: 0;
+    border-left: 0; 
+    border-bottom: 5px solid transparent;
+    border-top: 5px solid transparent;
+    border-right: 8px solid #444;
+}
+
+#menu ul li:first-child a:hover:after
+{
+    border-bottom-color: #04acec; 
+}
+
+#menu ul ul li:first-child a:hover:after
+{
+    border-right-color: #04acec; 
+    border-bottom-color: transparent;   
+}
+
+
+#menu ul li:last-child > a
+{
+    -moz-border-radius: 0 0 5px 5px;
+    border-radius: 0 0 5px 5px;
+}
+
+/* Clear floated elements */
+#menu:after 
+{
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+
+* html #menu             { zoom: 1; } /* IE6 */
+*:first-child+html #menu { zoom: 1; } /* IE7 */
