--- a/www_root/style.css
+++ b/www_root/style.css
@@ -84,6 +84,7 @@ header h1{
 
 .content{
 	margin: 0px auto;
+	margin-top: 20px;
 	max-width: 1000px;
 	background-color: white;
 	border-radius: 20px;
@@ -157,7 +158,7 @@ p{
 .info{
 	background-color: #dddddd;
 	border-radius: 10px;
-	margin: 30px 200px 20px 20px;
+	margin: 50px 200px 20px 20px;
 	padding: 20px;
 }
 
