--- a/etc/fg_docx_style.css
+++ b/etc/fg_docx_style.css
@@ -1,21 +1,58 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/******************************************************/
 /* The standard CSS for doxygen */
 
 body, table, div, p, dl {
 	font-family: Lucida Grande, Verdana, Geneva, Arial, sans-serif;
 	font-size: 12px;
-}
-
-
-#fg_docx_header {
-	background: #eeeeee;
-	background: -moz-linear-gradient(left,  #eeeeee 0%, #cccccc 100%);
-	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#eeeeee), color-stop(100%,#cccccc));
-	background: -webkit-linear-gradient(left,  #eeeeee 0%,#cccccc 100%);
-	background: -o-linear-gradient(left,  #eeeeee 0%,#cccccc 100%);
-	background: -ms-linear-gradient(left,  #eeeeee 0%,#cccccc 100%);
-	background: linear-gradient(to right,  #eeeeee 0%,#cccccc 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=1 );
-	
 }
 
 
@@ -26,10 +63,12 @@ h1 {
 }
 
 .title {
-	font-size: 150%;
+	font-size: 180%;
 	font-weight: bold;
 	margin: 10px 2px;
-	background-color: pink;
+	background-color: #dddddd;
+	border: 1px solid #999999;
+	padding: 3px 6px;
 }
 
 h2 {
@@ -1070,7 +1109,101 @@ dl.bug
 *:first-child+html #menu { zoom: 1; } /* IE7 */
 
 
+/*********************************************/
+/** FlightGear specific */
+/*********************************************/
+#fg_docx_header {
+	background: #eeeeee;
+	background: -moz-linear-gradient(left,  #eeeeee 0%, #cccccc 100%);
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#eeeeee), color-stop(100%,#cccccc));
+	background: -webkit-linear-gradient(left,  #eeeeee 0%,#cccccc 100%);
+	background: -o-linear-gradient(left,  #eeeeee 0%,#cccccc 100%);
+	background: -ms-linear-gradient(left,  #eeeeee 0%,#cccccc 100%);
+	background: linear-gradient(to right,  #eeeeee 0%,#cccccc 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=1 );
+	
+}
+
+#fg_docx_header h1{
+	border-bottom: 1px solid #dddddd;
+	padding: 8px 10px;
+	margin: 0;
+	color: #666666;
+	font-size: 16pt;
+	
+	text-align: left;
+	padding-left: 50px;
+}
+
+/**********************************************************************************************/
+/* top menu nicked from http://line25.com/tutorials/how-to-create-a-pure-css-dropdown-menu */
+#fg_top_nav {
+	margin: 100px auto; 
+	text-align: center;
+}
+
+#fg_top_nav ul ul {
+	display: none;
+}
+
+	#fg_top_nav ul li:hover > ul {
+		display: block;
+	}
 
 
+#fg_top_nav ul {
+	background: #efefef; 
+	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
+	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
+	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
+	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+	padding: 0 20px;
+	border-radius: 10px;  
+	list-style: none;
+	position: relative;
+	display: inline-table;
+}
+	#fg_top_nav ul:after {
+		content: ""; clear: both; display: block;
+	}
 
-
+	#fg_top_nav ul li {
+		float: left;
+	}
+		#fg_top_nav ul li:hover {
+			background: #4b545f;
+			background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
+			background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
+			background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
+		}
+			#fg_top_nav ul li:hover a {
+				color: #fff;
+			}
+		
+		#fg_top_nav ul li a {
+			display: block; padding: 25px 40px;
+			color: #757575; text-decoration: none;
+		}
+			
+		
+	#fg_top_nav ul ul {
+		background: #5f6975; border-radius: 0px; padding: 0;
+		position: absolute; top: 100%;
+	}
+		#fg_top_nav ul ul li {
+			float: none; 
+			border-top: 1px solid #6b727c;
+			border-bottom: 1px solid #575f6a; position: relative;
+		}
+			#fg_top_nav ul ul li a {
+				padding: 15px 40px;
+				color: #fff;
+			}	
+				#fg_top_nav ul ul li a:hover {
+					background: #4b545f;
+				}
+		
+	#fg_top_nav ul ul ul {
+		position: absolute; left: 100%; top:0;
+	}
+		
