--- a/etc/fg_docx_style.css
+++ b/etc/fg_docx_style.css
@@ -907,6 +907,7 @@ dl.bug
 
 #menu
 {
+	clear: both;
     width: 100%;
     margin: 0;
     padding: 10px 0 0 0;
@@ -1125,22 +1126,21 @@ dl.bug
 }
 
 #fg_docx_header h1{
-	border-bottom: 1px solid #dddddd;
 	padding: 8px 10px;
 	margin: 0;
-	color: #666666;
-	font-size: 16pt;
-	
+	color: #999999;
+	font-size: 10pt;
+	font-weight: bold;
 	text-align: left;
 	padding-left: 50px;
+	font-family: monospace;
 }
 
 /**********************************************************************************************/
 /* top menu nicked from http://line25.com/tutorials/how-to-create-a-pure-css-dropdown-menu */
 #fg_top_nav {
-	ssmargin: 100px auto; 
-	sstext-align: center;
 	float: left;
+	margin: 5px;
 }
 
 #fg_top_nav ul ul {
@@ -1149,6 +1149,7 @@ dl.bug
 
 	#fg_top_nav ul li:hover > ul {
 		display: block;
+		z-index: 2232000;
 	}
 
 
@@ -1158,53 +1159,63 @@ dl.bug
 	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
 	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
 	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
-	padding: 0 20px;
+	
 	border-radius: 10px;  
 	list-style: none;
 	position: relative;
 	display: inline-table;
+	
 }
-	#fg_top_nav ul:after {
-		content: ""; clear: both; display: block;
-	}
+#fg_top_nav ul:after {
+	content: ""; clear: both; display: block;
+}
 
-	#fg_top_nav ul li {
-		float: left;
-	}
-		#fg_top_nav ul li:hover {
-			background: #4b545f;
-			background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
-			background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
-			background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
-		}
-			#fg_top_nav ul li:hover a {
-				color: #fff;
-			}
+#fg_top_nav ul li {
+	float: left;
+	
+}
+#fg_top_nav ul ul li:hover {
+	background: #4b545f;
+	background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
+	background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
+	background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
+}
+#fg_top_nav ul li:hover a {
+	color: #fff;
+}
 		
-		#fg_top_nav ul li a {
-			display: block; padding: 25px 40px;
-			color: #757575; text-decoration: none;
-		}
+#fg_top_nav ul li a {
+	display: block; 
+	sspadding: 25px 40px;
+	color: #757575; 
+	text-decoration: none;
+	padding: 5px;
+	ssbackground-color: white;
+}
 			
 		
-	#fg_top_nav ul ul {
-		background: #5f6975; border-radius: 0px; padding: 0;
-		position: absolute; top: 100%;
-	}
-		#fg_top_nav ul ul li {
-			float: none; 
-			border-top: 1px solid #6b727c;
-			border-bottom: 1px solid #575f6a; position: relative;
-		}
-			#fg_top_nav ul ul li a {
-				padding: 15px 40px;
-				color: #fff;
-			}	
-				#fg_top_nav ul ul li a:hover {
-					background: #4b545f;
-				}
+#fg_top_nav ul ul {
+	background: #5f6975; 
+	border-radius: 0px; 
+	padding: 0;
+	position: absolute; top: 100%;
+}
+#fg_top_nav ul ul li {
+	float: none; 
+	border-top: 1px solid #6b727c;
+	border-bottom: 1px solid #575f6a; 
+	position: relative;
+}
+#fg_top_nav ul ul li a {
+	padding: 5px 10px;
+	color: #fff;
+	width: 200px;
+}	
+#fg_top_nav ul ul li a:hover {
+	background: #4b545f;
+}
 		
-	#fg_top_nav ul ul ul {
-		position: absolute; left: 100%; top:0;
-	}
+#fg_top_nav ul ul ul {
+	position: absolute; left: 100%; top:0;
+}
 		
