--- a/www_root/stylesheet.css
+++ b/www_root/stylesheet.css
@@ -1451,4 +1451,95 @@ dl.bug
 #fg_top_nav ul ul ul {
 	position: absolute; left: 100%; top:0;
 }
-		
+
+
+/*************************************************/
+
+.fg_content{
+	margin: 0px auto;
+	margin-top: 20px;
+	max-width: 1200px;
+	background-color: white;
+	border-radius: 20px;
+	padding: 20px;
+}
+   
+
+
+.fg_content h1{
+	text-align: left;
+	font-size: 26pt;
+	font-family: monospace;
+	color: #999999;
+	margin-left: 30px;
+	margin-top: 5px;
+	margin-bottom: 20px;
+}
+
+
+.fg_content table{
+	clear: both;
+	width: 100%;
+	font-family: sans-serif;
+	margin-bottom: 50px;
+}
+.fg_content table tr:hover{
+	background-color: #eeeeee;
+}
+.fg_content table th{
+	text-align: left;
+	background-color: white;
+	color: black;
+	padding: 5px 10px;
+	font-size: 10pt;
+	border-bottom: 1px solid #888888;
+}
+.fg_content table td{
+	border-bottom: 1px solid #dddddd;
+	font-size: 10pt;
+	padding: 5px 10px;
+}
+.fg_content table td a{
+	font-weight: normal;
+	
+}
+.fg_content table td a.lnk{
+	display: block;
+	font-weight: bold;
+	font-size: 12pt;
+	padding-left: 10px;
+}
+
+
+.fg_content h2{
+	font-size: 26pt;
+	font-family: monospace;
+	color: #999999;
+	border-bottom: 3px dotted #dddddd;
+}
+
+.fg_content p{
+	
+	padding: 10px;
+	line-height: 140%;
+	font-size: 12pt;
+	font-family: sans-serif;
+}
+
+.fg_content  .info{
+	background-color: #dddddd;
+	border-radius: 10px;
+	margin: 50px 200px 20px 20px;
+	padding: 20px;
+}
+
+.fg_content ul{
+	list-style-type: disc;
+	margin-left: 20px;
+}
+.fg_content li{
+	padding: 5px;
+	line-height: 140%;
+}
+
+
