tg is pissing me off

--- a/etc/fg_xstyle.css
+++ b/etc/fg_xstyle.css
@@ -17,7 +17,7 @@ table#projects_index{
 
 
 #projects_index th{
-	background-color: #efefef;
+	background-color: #dddddd;
 	border: 1px outset #dddddd;
 	text-align: left;
 	margin: 0;
